# latent-space-constraint-GNN

./: .gitignore  README.md  autoencoder.py  batch.py  batch_vgae.py  main.py  main_baseline.py  main_mpi.py  main_vgae.py  mpi_main_lightning.py  multi_run.sh  pyproject.toml  requirements.txt  test_script.sh
cgvae/: autoencoder.py  baseline.py  cgvae_model.py  data_transform.py  utils.py
config/heterogeneous/: config.yaml
config/homogeneous/: config.yaml
docker/: .dockerignore  Dockerfile  train.yaml
notebook/: cgvae.ipynb  simulation.ipynb
notebook/analysis/: aggregation.ipynb
notebook/data_processing/: KGML_processing.ipynb  PPI-MPI-MM-preparation.ipynb  SMILES_encoding.ipynb  mapping_ENSP_to_accession.ipynb  metabolite_id_mapping.ipynb  ppi_processing.ipynb
notebook/graphite/: kegg_pathways.nb.html  kegg_pathways.rmd
results/: results.json
src/: baseline.py  cgvae.ipynb  cgvae.py  data_transform.py  encoder.py  experiment_with_missing_edges.ipynb  gcn_proprocess.py  prognn.py  simulation.ipynb  utils.py
src/GCNJaccard/: GCNJaccard.py
src/cgvae/: __init__.py  autoencoder.py  baseline.py  cgvae_model.py  cgvae_model_hetero.py  data_transform.py  main.py  random_graph.py  test.py  utils.py
src/data/: data_transform.py  mettack.py  utils.py
src/loader/: protein_loader.py
src/model/: LSC.py  LSCGNN_hetero.py  __init__.py  baseline.py  cgvae_model.py  cgvae_model_hetero.py  data_transform.py  hetero.py  test.py  utils.py
src/model/data/: hetero_data_module.py
