[tool.poetry]
name = "lsc_gnn"
version = "0.1.0"
description = ""
authors = ["Chunhui Gu <fduguchunhui@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11.0, <3.12"
numpy = "^1.26.4"
overrides = "^7.7.0"
tqdm = "^4.66.2"
pathlib = "^1.0.1"
charset-normalizer = "^3.1.0"  # Needed cause of a bug in poetry
urllib3 = "^1.26.16"  # Needed cause of a bug in poetry
torch-geometric = "^2.6.1"
matplotlib = {version="^3.9.0", optional=true}
torch = "2.4.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pytorch-lightning = "^2.5.0.post0"
tensorboard = {version = "^2.18.0", optional = true}
hydra-core = "^1.3.2"
mlflow = {version = "^2.20.1", extras = ["logging"]}
jupyterlab = {version = "^4.3.5", optional = true}
jupyter = {version = "^1.1.1", optional = true}
notebook = "^7.3.2"
tornado = "^6.4.2"
deeprobust = "^0.2.11"
scipy = "1.10.1"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib", "jupyterlab"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



