[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsc-gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Chunhui Gu", email = "fduguchunhui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "overrides>=7.7.0,<8.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "pathlib>=1.0.1,<2.0.0",
    "charset-normalizer>=3.1.0,<4.0.0",
    "urllib3>=1.26.16,<2.0.0",
    "torch-geometric>=2.6.1,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "pytorch-lightning>=2.5.0.post0,<3.0.0",
    "hydra-core>=1.3.2,<2.0.0",
    "mlflow[logging]>=2.20.1,<3.0.0",
    "notebook>=7.3.2,<8.0.0",
    "tornado>=6.4.2,<7.0.0",
    "deeprobust>=0.2.11,<1.0.0",
    "scipy==1.10.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1,<2.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "jupyterlab>=4.3.5,<5.0.0",
    "tensorboard>=2.18.0,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]



