[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsc-gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Chunhui Gu", email = "fduguchunhui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "overrides>=7.7.0,<8.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "pathlib>=1.0.1,<2.0.0",
    "charset-normalizer>=3.1.0,<4.0.0",
    "urllib3>=1.26.16,<2.0.0",
    "torch-geometric>=2.6.1,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "pytorch-lightning>=2.5.0.post0,<3.0.0",
    "hydra-core>=1.3.2,<2.0.0",
    "tornado>=6.4.2,<7.0.0",
    "deeprobust>=0.2.11,<1.0.0",
    "scipy==1.10.1",
    "torch==2.8.0",
    "torch_scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2-cp311-cp311-macosx_10_9_universal2.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "torch_sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18-cp311-cp311-macosx_11_0_universal2.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "torch_cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3-cp311-cp311-macosx_10_9_universal2.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "torch_spline_conv @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_spline_conv-1.2.2-cp311-cp311-macosx_10_9_universal2.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "torch_scatter @ https://data.pyg.org/whl/torch-2.8.0+cu128/torch_scatter-2.1.2+pt28cu128-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "torch_sparse @ https://data.pyg.org/whl/torch-2.8.0+cu128/torch_sparse-0.6.18+pt28cu128-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "torch_cluster @ https://data.pyg.org/whl/torch-2.8.0+cu128/torch_cluster-1.6.3+pt28cu128-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "torch_spline_conv @ https://data.pyg.org/whl/torch-2.8.0+cu128/torch_spline_conv-1.2.2+pt28cu128-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "hydra-joblib-launcher>=1.2.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1,<2.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "jupyterlab>=4.3.5,<5.0.0",
    "tensorboard>=2.18.0,<3.0.0",
    "notebook>=7.3.2,<8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", marker = "platform_system == 'Darwin'"},
  { index = "torch-gpu", marker = "platform_system == 'Linux'"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true



